feat: load more stuff properly